# CG

./: CMakeLists.txt  cg_mrp.py
APU/Phase_Amelioration/: 2015_09_02_nouvelle_version.py
CHALLENGES/BACK_IN_THE_CODE/: cg_algo.py  cg_empty.py  cg_heart.py  cg_mrp.py
CHALLENGES/BACK_IN_THE_CODE/GO/: algo_simple.go
CHALLENGES/BACK_IN_THE_CODE/PYTHON/: cg_algo.py  cg_mrp.py
CHALLENGES/BACK_IN_THE_CODE/uct/: UCT.py  uct_for_CG.py
DIFFICILE/APU__Phase_d_amelioration/PYTHON/: solution_ne_fonctionne_pas_sur_CG.py
DIFFICILE/Indentation CGX/C++/: solution.cpp
DIFFICILE/Indentation CGX/PYTHON/: parser.py  test.sh
DIFFICILE/Montagnes_russes/PYTHON/: solution_recherche_cycle.py
DIFFICILE/Reseau_TAN/PYTHON/: solution_dijkstra_namedtuples.py
DIFFICILE/Sequence_du_Genome/: test.sh
DIFFICILE/Sequence_du_Genome/PYTHON/: solution_lcsp.py  solution_lcsp_2.py  solution_lcsp_2_debug.py  solution_light.py
DIFFICILE/Skynet_contre-attaque/PYTHON/: solution_dijkstra_graph.py
DIFFICILE/Super_Calculateur/PYTHON/: solution_simple.py
DIFFICILE/Surface/PYTHON/: solution_flood_full_simple.py
DIFFICILE/bender_complexite_algorithmique/: soluce.py  soluce_with_scipy.py
MOYEN/Detecteur_de_chaleur_Batman/: solution_minmax_AABBOX.py
PUZZLES/Simplify_Selection_Ranges/: in1.txt  in2.txt  in4.txt  out1.txt  out2.txt  out4.txt  test.sh
SCRIPT/: test.sh
TRES_DIFFICILE/Nintendo_Sponsored_Challenge/: encode  experiment.py  in1.txt  solution.cpp
TRES_DIFFICILE/Partitions_de_musique/: .test_diff  test.sh
TRES_DIFFICILE/Triangulation/: gnuplot_maxima_circle_in_grid.txt
(+67 files in other folders)
